:milky_way: small changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
         <button class="btn">Create account</button>
     </nav>
-    <header>
+    <header class='index_header_main'>
         <div class="section__container header__container">
             <div class="content__container">
                 <h1>
