--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="icon/Icon_Business64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="icon/Icon_Business48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="icon/Icon_business32.png" sizes="32x32">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/7aea9fad7b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Altvesting.</title>
 </head>
+
 <body>
     <nav>
         <div class="nav__logo"><span>&#10040;</span>Altvesting.</div>
-        <div class="burger-menu">
-            <div class="burger-menu__line"></div>
-            <div class="burger-menu__line"></div>
-            <div class="burger-menu__line"></div>
-        </div>
         <ul class="nav__links">
             <li class="link"><a target="_blank" href="#">Home</a></li>
             <li class="link"><a target="_blank" href="#">About Us</a></li>
@@ -26,6 +24,9 @@
             <li class="link"><a target="_blank" href="#">Contact us</a></li>
         </ul>
         <button class="btn">Create account</button>
+        <div class="nav__menu__btn" id="menu-btn">
+            <span><i class="ri-menu-line"></i></span>
+        </div>
     </nav>
     <header class='index_header_main'>
         <div class="section__container header__container">
@@ -109,4 +110,5 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
