--- a/index.html
+++ b/index.html
@@ -7,108 +7,115 @@
     <link rel="icon" type="image/png" href="icon/Icon_Business64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="icon/Icon_Business48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="icon/Icon_business32.png" sizes="32x32">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/7aea9fad7b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Altvesting.</title>
 </head>
 
 <body>
-    <nav>
-        <div class="nav__logo"><span>&#10040;</span>Altvesting.</div>
-        <ul class="nav__links">
-            <li class="link"><a target="_blank" href="#">Home</a></li>
-            <li class="link"><a target="_blank" href="#">About Us</a></li>
-            <li class="link"><a target="_blank" href="#">Investment Strategies</a></li>
-            <li class="link"><a target="_blank" href="#">Portfolio Management</a></li>
-            <li class="link"><a target="_blank" href="#">Contact us</a></li>
-        </ul>
-        <button class="btn">Create account</button>
-        <div class="nav__menu__btn" id="menu-btn">
-            <span><i class="ri-menu-line"></i></span>
-        </div>
-    </nav>
-    <header class='index_header_main'>
-        <div class="section__container header__container">
-            <div class="content__container">
-                <h1>
-                    Innovative<br />
-                    <span class="heading__1">Investment</span><br />
-                    solutions for<br />
-                    retirement
-                </h1>
-                <p>
-                    Archive your financial goals with our expert investment strategies
-                    and innovative solutions tailored to your needs.
-                </p>
-                <div class="content__button">
-                    <button class="content__btn1">Let's get started</button>
-                    <button class="content__btn2">
-                        <img src="img/play.svg" alt="play">
-                        <p>See how it works</p>
-                    </button>
-                </div>
-                <div class="content__icons">
-                    <div class="content__image">
-                        <img src="img/icon1.jpg" alt="icon">
+    <div class="body-wrapper">
+        <nav class="header">
+            <div class="nav__logo"><span>&#10040;</span>Altvesting.</div>
+            <button class="nav__burger-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav__links">
+                <li class="link"><a target="_blank" href="#">Home</a></li>
+                <li class="link"><a target="_blank" href="#">About Us</a></li>
+                <li class="link"><a target="_blank" href="#">Investment Strategies</a></li>
+                <li class="link"><a target="_blank" href="#">Portfolio Management</a></li>
+                <li class="link"><a target="_blank" href="#">Contact us</a></li>
+            </ul>
+            <button class="btn">Create account</button>
+        </nav>
+        <header class='index_header_main'>
+            <div class="section__container header__container">
+                <div class="content__container">
+                    <h1>
+                        Innovative<br />
+                        <span class="heading__1">Investment</span><br />
+                        solutions for<br />
+                        retirement
+                    </h1>
+                    <p>
+                        Archive your financial goals with our expert investment strategies
+                        and innovative solutions tailored to your needs.
+                    </p>
+                    <div class="content__button">
+                        <button class="content__btn1">Let's get started</button>
+                        <button class="content__btn2">
+                            <img src="img/play.svg" alt="play">
+                            <p>See how it works</p>
+                        </button>
                     </div>
-                    <div class="content__image">
-                        <img src="img/icon2.jpg" alt="icon">
-                    </div>
-                    <div class="content__image">
-                        <img src="img/icon3.jpg" alt="icon">
-                    </div>
-                    <div class="content__rating">
-                        <i class="fa-solid fa-star"></i>
-                    </div>
-                    <div class="ratind__descr">
-                        <h3>5.0 Happy Customer </h3>
-                        <span>(10.2K Review by our customers)</span>
-                    </div>
-                </div>
-            </div>
-            <div class="image__container">
-                <img src="img/coin.png" alt="coin" />
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="section__container description__container">
-            <div class="description__grid">
-                <div class="description__card1">
-                    <div class="description__details">
-                        <div class="description__title">
-                            <span>❉</span>
-                            <p>about our company</p>
+                    <div class="content__icons">
+                        <div class="content__image">
+                            <img src="img/icon1.jpg" alt="icon">
                         </div>
-                        <div class="time">
-                            <p>EST SINCE</p>
-                            <p>2021</p>
+                        <div class="content__image">
+                            <img src="img/icon2.jpg" alt="icon">
+                        </div>
+                        <div class="content__image">
+                            <img src="img/icon3.jpg" alt="icon">
+                        </div>
+                        <div class="content__rating">
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <div class="ratind__descr">
+                            <h3>5.0 Happy Customer </h3>
+                            <span>(10.2K Review by our customers)</span>
                         </div>
                     </div>
-                    <div class="description__subtitle">
-                        <span class="guid">Guiding</span> you to have<br /> financial <span class="free">freedom</span>
+                </div>
+                <div class="image__container">
+                    <img src="img/coin.png" alt="coin" />
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="section__container description__container">
+                <div class="description__grid">
+                    <div class="description__card1">
+                        <div class="description__details">
+                            <div class="description__title">
+                                <span>❉</span>
+                                <p>about our company</p>
+                            </div>
+                            <div class="time">
+                                <p>EST SINCE</p>
+                                <p>2021</p>
+                            </div>
+                        </div>
+                        <div class="description__subtitle">
+                            <span class="guid">Guiding</span> you to have<br /> financial <span
+                                class="free">freedom</span>
 
-                    </div>
-                </div>
-                <div class="description__card2">
-                    <div class="money">
-                        <div class="description__money">
-                            <span>$2,945M</span>
-                            <p>Profit make by member</p>
-                        </div>
-                        <div class="clients">
-                            <span>Our happy customers</span>
-                            <p><i class="fa-solid fa-star"></i><span>4.8</span>(10.2K succes stories)</p>
                         </div>
                     </div>
-                    <hr>
-                    <div class="money__subtitle">
-                        <p>"Choosing altvest was the best decision I made for mu</p>
+                    <div class="description__card2">
+                        <div class="money">
+                            <div class="description__money">
+                                <span>$2,945M</span>
+                                <p>Profit make by member</p>
+                            </div>
+                            <div class="clients">
+                                <span>Our happy customers</span>
+                                <p><i class="fa-solid fa-star"></i><span>4.8</span>(10.2K succes stories)</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="money__subtitle">
+                            <p>"Choosing altvest was the best decision I made for mu</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <script src="script.js"></script>
 </body>
+
+</html>
